--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_heart_b_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_heart_b_icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".activity.DetailHistoryActivity"></activity>
+        <activity android:name=".activity.DetailItemActivity" />
         <activity android:name=".activity.UserInfoActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.AddItemActivity" />
@@ -26,6 +28,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.MainActivity" />
+
+        <receiver android:name=".broadcastReceiver.AlarmReceiver">
+            <intent-filter>
+                <action android:name="alarm" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
